--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="./css/index.css">
+  <meta charset="UTF-8">
+  <title></title>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <app>
-        <history-control>
-            <a href="#"><</a>
-        </history-control>
 
-        <page-name>Home</page-name>
+<app>
+  <header>
+    <left>
+      <history-control>
+        <a href="#"><</a>
+      </history-control>
+    </left>
+    <middle>
+      <page-name>Home</page-name>
+    </middle>
+    <right>
+      <context-menu>
+        <a href="#">About</a>
+        <a href="#">Add app to screen</a>
+        <a href="#">Terms of use</a>
+      </context-menu>
+    </right>
+  </header>
+  <main>...</main>
+  <footer>
+    <nav>
+      <a href="#">Reports</a>
+      <a href="#">Add</a>
+      <a href="report.html">Profile</a>
+    </nav>
+  </footer>
+</app>
 
-        <context-menu>
-            <a href="#">About</a>
-            <a href="#">Add app to screen</a>
-            <a href="#">Terms of use</a>
-        </context-menu>
-
-        <main>...</main>
-
-        <nav>
-            <a href="#">Reports</a>
-            <a href="#">Add</a>
-            <a href="#">Profile</a>
-        </nav>
-    </app>
 </body>
 </html>
