--- a/index.html
+++ b/index.html
@@ -2,37 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/shared.css">
+  <link rel="stylesheet" href="./css/pages/splash.css">
 </head>
 <body>
 
 <app>
-  <header>
-    <left>
-      <history-control>
-        <a href="#"><</a>
-      </history-control>
-    </left>
-    <middle>
-      <page-name>Home</page-name>
-    </middle>
-    <right>
-      <context-menu>
-        <a href="#">About</a>
-        <a href="#">Add app to screen</a>
-        <a href="#">Terms of use</a>
-      </context-menu>
-    </right>
-  </header>
-  <main>...</main>
-  <footer>
-    <nav>
-      <a href="#">Reports</a>
-      <a href="#">Add</a>
-      <a href="report.html">Profile</a>
-    </nav>
-  </footer>
+  <splash>
+    <h1>Ready to report?</h1>
+    <h2>Report, track and discuss local problems!</h2>
+    <login-button><a href="reports.html">Facebook</a></login-button>
+  </splash>
 </app>
 
 </body>
