--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
-<link rel="stylesheet" href="./css/index.css">
+<link rel="stylesheet" href="./css/shared.css">
 <link rel="stylesheet" href="./css/pages/report.css">
 <body>
 
