--- a/reports.html
+++ b/reports.html
@@ -2,33 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/shared.css">
   <link rel="stylesheet" href="./css/pages/reports.css">
 </head>
 <body>
 
-<reports>
-  <report>
-    <picture>
-      <img src="#" alt="">
-    </picture>
-    <name>Missing manhole</name>
-    <distance>2 m.</distance>
-    <date>2 min ago</date>
-    <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
-  </report>
-  <report>
-    <picture>
-      <img src="#" alt="">
-    </picture>
-    <name>Missing manhole</name>
-    <distance>2 m.</distance>
-    <date>2 min ago</date>
-    <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
-  </report>
+<app>
+  <header>
+    <left>
+      <history-control>
+        <a href="#"><</a>
+      </history-control>
+    </left>
+    <middle>
+      <page-name>Home</page-name>
+    </middle>
+    <right>
+      <context-menu>
+        <a href="#">About</a>
+        <a href="#">Add app to screen</a>
+        <a href="#">Terms of use</a>
+      </context-menu>
+    </right>
+  </header>
+  <main>
 
-</reports>
+    <reports>
+      <report>
+        <picture>
+          <img src="#" alt="">
+        </picture>
+        <name>Missing manhole</name>
+        <distance>2 m.</distance>
+        <date>2 min ago</date>
+        <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
+      </report>
+      <report>
+        <picture>
+          <img src="#" alt="">
+        </picture>
+        <name>Missing manhole</name>
+        <distance>2 m.</distance>
+        <date>2 min ago</date>
+        <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
+      </report>
+    </reports>
+
+  </main>
+  <footer>
+    <nav>
+      <a href="#">Reports</a>
+      <a href="#">Add</a>
+      <a href="report.html">Profile</a>
+    </nav>
+  </footer>
+</app>
 
 </body>
 </html>
