Font-size based on vw

--- a/report.html
+++ b/report.html
@@ -23,7 +23,7 @@
     </picture>
 
     <distance>2 meter</distance>
-    <date>Created 1 week ago (12.02.2018)</date>
+    <time>Created 1 week ago (12.02.2018)</time>
 
     <name><h1>Missing manhole</h1></name>
 
@@ -62,7 +62,7 @@
         <button>report</button>
       </actions>
 
-      <date>Created 1 week ago (12.02.2018)</date>
+      <time>Created 1 week ago (12.02.2018)</time>
 
       <picture>
         <img src="img_orange_flowers.jpg">
@@ -75,9 +75,9 @@
         <name>Nikolay Aleksandrenko</name>
       </author>
 
-      <update>
+      <uptime>
         status change: closed
-      </update>
+      </uptime>
 
       <comment>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
