--- a/reports.html
+++ b/reports.html
@@ -40,7 +40,7 @@
         </picture>
         <name>Missing manhole lorem lipsum dolor sit emet</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -49,7 +49,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -58,7 +58,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -67,7 +67,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -76,7 +76,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -85,7 +85,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -94,7 +94,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -103,7 +103,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -112,7 +112,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -121,7 +121,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -130,7 +130,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
       <report>
@@ -139,7 +139,7 @@
         </picture>
         <name>Missing manhole</name>
         <distance>2 m.</distance>
-        <date>2 min ago</date>
+        <time>2 min ago</time>
         <comment>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</comment>
       </report>
     </reports>
